gcc_errors.txt
PDF 4# - convertir a pulgadas, yardas, pies.c: In function 'main':
PDF 4# - convertir a pulgadas, yardas, pies.c:34:13: error: invalid suffix "s2" on integer constant
   34 | pulgadas %= 1s2;
      |             ^~~
